--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 			</div>
 		</div>
 	</div>
-		<div class="container">
+	<div class="container">
 		<div class="row">
 			<div class="d-flex">
 				<div id="searchParameters">
+					<h2>Search Parameters</h2>
 					<form>
 						Search Term: <input type="text" name="searchTerm" value="Type Search Here">
 						<br>
@@ -32,6 +33,11 @@
 					</form>
 				</div>
 			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="articleDiv">
+			<h2>Top Articles</h2>
 		</div>
 	</div>
 </body>
