--- a/index.html
+++ b/index.html
@@ -40,5 +40,8 @@
 			<h2>Top Articles</h2>
 		</div>
 	</div>
+
+	<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
