--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<form>
 						<div class="form-group">
 							<label for="search">Search Term: </label>
-							<input type="text" class="form-control" id="searchTerm" name="searchTerm" value="Type Search Here">
+							<input type="text" class="form-control" id="searchTerm" name="searchTerm">
 						</div>
 						<br>
 						<div class="form-group">
@@ -50,7 +50,8 @@
 						
 
 						<br>
-						<input id="submit" type="submit" value="Submit">
+						<button type="submit" class="btn btn-default" id="runSearch">Search</button>
+						<button type="button" class="btn btn-default" id="clearAll">Clear Results</button>
 					</form>
 				</div>
 			</div>
